k8s/apps/filerise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerise
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: filerise
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: filerise-internal
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: filerise
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
