k8s/apps/filerise/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filerise
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "files.k8s.nyumbani.home"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filerise
          port: 80
